# stats.rs

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
cast/: enum.Error.html  fn.f32.html  fn.f64.html  fn.i16.html  fn.i32.html  fn.i64.html  fn.i8.html  fn.isize.html  fn.u16.html  fn.u32.html  fn.u64.html  fn.u8.html  fn.usize.html  index.html  trait.From.html
criterion_stats/: enum.Tails.html  index.html  sidebar-items.js  struct.Distribution.html
criterion_stats/bivariate/: index.html  sidebar-items.js  struct.Data.html  struct.Pairs.html
criterion_stats/bivariate/regression/: index.html  sidebar-items.js  struct.Slope.html  struct.StraightLine.html
criterion_stats/tuple/: index.html  sidebar-items.js  trait.Tuple.html  trait.TupledDistributions.html
criterion_stats/univariate/: fn.bootstrap.html  index.html  sidebar-items.js  struct.Percentiles.html  struct.Sample.html
criterion_stats/univariate/kde/: enum.Bandwidth.html  index.html  sidebar-items.js  struct.Kde.html
criterion_stats/univariate/mixed/: fn.bootstrap.html  index.html  sidebar-items.js
criterion_stats/univariate/outliers/: index.html  sidebar-items.js
criterion_stats/univariate/percentiles/: sidebar-items.js  (+1 more)
floaty/: index.html  sidebar-items.js  trait.Floaty.html
implementors/floaty/: trait.Floaty.js
rand/: struct.AsciiGenerator.html  struct.Generator.html
src/: lib.rs  tuple.rs
src/bivariate/: regression.rs
src/cast/: lib.rs.html
src/floaty/: lib.rs.html
src/thread_scoped/: lib.rs.html
src/univariate/: bootstrap.rs  mod.rs  percentiles.rs  sample.rs
(+46 files in other folders)
