[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
description = "Criterion's statistics library"
documentation = "http://japaric.github.io/stats.rs/criterion-stats"
keywords = ["statistics", "stats"]
license = "MIT OR Apache-2.0"
name = "criterion-stats"
repository = "https://github.com/japaric/stats.rs"
version = "0.1.0"

[dependencies]
cast = "0.2.0"
floaty = "0.1.0"
num_cpus = "1.2.1"
rand = "0.3.13"
thread-scoped = "1.0.1"

[dev-dependencies]
approx = "0.1.0"
itertools = "0.5.9"
itertools-num = "0.1.1"
quickcheck = "0.4.1"
quickcheck_macros = "0.4.1"
